src/test/ui/associated-types/associated-types-invalid-trait-ref-issue-18865.stderr
error[E0277]: the trait bound `T: Foo<usize>` is not satisfied
  --> $DIR/associated-types-invalid-trait-ref-issue-18865.rs:10:12
   |
LL |     let u: <T as Foo<usize>>::Bar = t.get_bar();
   |            ^^^^^^^^^^^^^^^^^^^^^^ the trait `Foo<usize>` is not implemented for `T`
   |
help: consider changing this type parameter bound to `Foo<usize>`
   |
LL | fn f<T:Foo<usize>>(t: &T) {
   |        ~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
